force-app/main/default/objects/Case/fields/Department_Hours_are_Charged_To__c.field-meta.xml
<CustomField>
    <fullName>Department_Hours_are_Charged_To__c</fullName>
    <label>Department Hours are Charged To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>AMG Cloud</fullName>
            </value>
            <value>
                <fullName>AMG Marketing &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Digital Content &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Executive Sales</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing Collateral</fullName>
            </value>
            <value>
                <fullName>Marketing Services Account Management</fullName>
            </value>
            <value>
                <fullName>Outbound Pipeline Account Management</fullName>
            </value>
            <value>
                <fullName>Outbound Pipeline Activity Fulfillment</fullName>
            </value>
            <value>
                <fullName>Product &amp; Process Management</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Video Production</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
                <isActive>false</isActive>
                <label>Automotive</label>
            </value>
            <value>
                <fullName>HR / Recruiting / Training</fullName>
                <isActive>false</isActive>
                <label>HR / Recruiting / Training</label>
            </value>
            <value>
                <fullName>Implementations / Operations</fullName>
                <isActive>false</isActive>
                <label>Implementations / Operations</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
                <isActive>false</isActive>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Product Development / Sales</fullName>
                <isActive>false</isActive>
                <label>Product Development / Sales</label>
            </value>
            <value>
                <fullName>Support</fullName>
                <isActive>false</isActive>
                <label>Support</label>
            </value>
            <value>
                <fullName>Website / Ongoing Creative Product Development</fullName>
                <isActive>false</isActive>
                <label>Website / Ongoing Creative Product Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>