force-app/main/default/objects/Case/fields/Department_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Department_of_Origin__c</fullName>
    <label>Department of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound Pipeline</fullName>
            </value>
            <value>
                <fullName>Executive Sales</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Cloud</fullName>
            </value>
            <value>
                <fullName>Training &amp; Recruiting</fullName>
            </value>
            <value>
                <fullName>Outbound Operations</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Inbound Pipeline</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Video</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Bionic SDR</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
                <isActive>false</isActive>
                <label>Agency</label>
            </value>
            <value>
                <fullName>Content</fullName>
                <isActive>false</isActive>
                <label>Content</label>
            </value>
            <value>
                <fullName>Copywriters</fullName>
                <isActive>false</isActive>
                <label>Copywriters</label>
            </value>
            <value>
                <fullName>Creative</fullName>
                <isActive>false</isActive>
                <label>Creative</label>
            </value>
            <value>
                <fullName>Digital Strategy</fullName>
                <isActive>false</isActive>
                <label>Digital Strategy</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
                <isActive>false</isActive>
                <label>Implementation</label>
            </value>
            <value>
                <fullName>Management</fullName>
                <isActive>false</isActive>
                <label>Management</label>
            </value>
            <value>
                <fullName>Office Manager / Facilities Requests</fullName>
                <isActive>false</isActive>
                <label>Office Manager / Facilities Requests</label>
            </value>
            <value>
                <fullName>Training and Quality</fullName>
                <isActive>false</isActive>
                <label>Training and Quality</label>
            </value>
            <value>
                <fullName>Video Production</fullName>
                <isActive>false</isActive>
                <label>Video Production</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>