force-app/main/default/objects/Case/fields/Department_Responsible_for_Issue__c.field-meta.xml
<CustomField>
    <fullName>Department_Responsible_for_Issue__c</fullName>
    <description>This is used to control the amount of options in the Case Type field. The Case Type picklist will be dependent on the Department chosen.</description>
    <label>Department Responsible for Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>AMG - Copywriting / Editing / Design</fullName>
            </value>
            <value>
                <fullName>AMG - Operations</fullName>
            </value>
            <value>
                <fullName>Bionic SDR</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Executive Sales Support</fullName>
            </value>
            <value>
                <fullName>External Marketing</fullName>
            </value>
            <value>
                <fullName>Human Resources / Training / A-Player Requests</fullName>
                <label>Human Resources</label>
            </value>
            <value>
                <fullName>Inbound SDR</fullName>
            </value>
            <value>
                <fullName>Internal Marketing</fullName>
            </value>
            <value>
                <fullName>Office / Facilities Requests</fullName>
            </value>
            <value>
                <fullName>Outbound Pipeline</fullName>
            </value>
            <value>
                <fullName>Product, Process, Reporting</fullName>
                <label>Product / Process / A-Player &amp; Reporting</label>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Salesforce Support</fullName>
            </value>
            <value>
                <fullName>Sapper - Copywriting / Editing</fullName>
            </value>
            <value>
                <fullName>Sapper - Operations &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Sapper - Tech Maintenance</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
                <isActive>false</isActive>
                <label>Content</label>
            </value>
            <value>
                <fullName>Creative</fullName>
                <isActive>false</isActive>
                <label>Creative</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
                <isActive>false</isActive>
                <label>Implementation</label>
            </value>
            <value>
                <fullName>VMM</fullName>
                <isActive>false</isActive>
                <label>VMM</label>
            </value>
            <value>
                <fullName>Web Development</fullName>
                <isActive>false</isActive>
                <label>Web Development</label>
            </value>
            <value>
                <fullName>Website Development / Digital</fullName>
                <isActive>false</isActive>
                <label>Website Development / Digital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>