force-app/main/default/objects/Case/fields/Departments_of_Impact__c.field-meta.xml
<CustomField>
    <fullName>Departments_of_Impact__c</fullName>
    <label>Departments of Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>AMG Cloud</fullName>
            </value>
            <value>
                <fullName>AMG Marketing &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Bionic SDR - Account Management</fullName>
            </value>
            <value>
                <fullName>Bionic SDR - Fulfillment</fullName>
            </value>
            <value>
                <fullName>Bionic SDR - Operations</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Inbound SDR - Account Management</fullName>
            </value>
            <value>
                <fullName>Inbound SDR - Fulfillment</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing/Culture</fullName>
            </value>
            <value>
                <fullName>Outbound SDR - Account Management</fullName>
            </value>
            <value>
                <fullName>Outbound SDR - Fulfillment</fullName>
            </value>
            <value>
                <fullName>Outbound SDR - Operations</fullName>
            </value>
            <value>
                <fullName>Product, Process, and Project Management</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Sales/Sales Enablement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>