force-app/main/default/objects/Case/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description (custom)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>