force-app/main/default/objects/Case/fields/Desired_Outcome_Questions__c.field-meta.xml
<CustomField>
    <fullName>Desired_Outcome_Questions__c</fullName>
    <label>Desired Outcome/Questions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>