force-app/main/default/objects/Case/fields/Dev_Needed__c.field-meta.xml
<CustomField>
    <fullName>Dev_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when developers are needed to support the case.</inlineHelpText>
    <label>Dev Needed</label>
    <type>Checkbox</type>
</CustomField>