force-app/main/default/objects/Case/fields/Dev_Status__c.field-meta.xml
<CustomField>
    <fullName>Dev_Status__c</fullName>
    <label>Dev Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>On Deck</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Rework Needed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Testing in Sandbox</fullName>
            </value>
            <value>
                <fullName>Merge to Full</fullName>
            </value>
            <value>
                <fullName>Testing in Full</fullName>
            </value>
            <value>
                <fullName>Ready to Deploy</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>QA/Testing</fullName>
                <isActive>false</isActive>
                <label>QA/Testing</label>
            </value>
            <value>
                <fullName>Ticket Allocated</fullName>
                <isActive>false</isActive>
                <label>Ticket Allocated</label>
            </value>
            <value>
                <fullName>Ticket Created</fullName>
                <isActive>false</isActive>
                <label>Ticket Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>