force-app/main/default/objects/Case/fields/Dev_Team_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Dev_Team_Allocated__c</fullName>
    <label>Dev Team Allocated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jessica</fullName>
            </value>
            <value>
                <fullName>Tengo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>