force-app/main/default/objects/Case/fields/Devices_Required__c.field-meta.xml
<CustomField>
    <fullName>Devices_Required__c</fullName>
    <label>Devices Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Video Recording</fullName>
            </value>
            <value>
                <fullName>Microphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>