force-app/main/default/objects/Case/fields/Digital_Audit_URL__c.field-meta.xml
<CustomField>
    <fullName>Digital_Audit_URL__c</fullName>
    <description>Used for the Case Type &apos;Website Audit&apos;. Must be populated before moving case to Closed. When case is Closed, the matching field on the account page will be updated.</description>
    <inlineHelpText>Used for the Case Type &apos;Website Audit&apos;. Must be populated before moving case to Closed. When case is Closed, the matching field on the account page will be updated.</inlineHelpText>
    <label>Digital Audit URL</label>
    <type>Url</type>
</CustomField>