force-app/main/default/objects/Case/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <label>Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Extra Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>