force-app/main/default/objects/Case/fields/ESC__c.field-meta.xml
<CustomField>
    <fullName>ESC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESC</label>
    <referenceTo>ESC__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>