force-app/main/default/objects/Case/fields/Examples__c.field-meta.xml
<CustomField>
    <fullName>Examples__c</fullName>
    <label>Examples</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>