force-app/main/default/objects/Case/fields/Expected_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Due_Date__c</fullName>
    <description>End Date field of the related action in the Associated Action field on the case.</description>
    <formula>Associated_Action__r.amc__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Associated with Action End Date</inlineHelpText>
    <label>Expected Due Date</label>
    <type>Date</type>
</CustomField>