force-app/main/default/objects/Case/fields/Explanation_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Explanation_for_Request__c</fullName>
    <label>Explanation for Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>