force-app/main/default/objects/Case/fields/Fits_Qualifiers__c.field-meta.xml
<CustomField>
    <fullName>Fits_Qualifiers__c</fullName>
    <label>Fits Qualifiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>