force-app/main/default/objects/Case/fields/Guided_Case_Submission__c.field-meta.xml
<CustomField>
    <fullName>Guided_Case_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when case is submitted using Flow &quot;Case: Guided Case Submission&quot;</description>
    <label>Guided Case Submission</label>
    <type>Checkbox</type>
</CustomField>