force-app/main/default/objects/Case/fields/Hours_Charged_To__c.field-meta.xml
<CustomField>
    <fullName>Hours_Charged_To__c</fullName>
    <description>used to assign marketing case owners in guided submission flow</description>
    <label>Hours Charged To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>AMG Cloud</fullName>
            </value>
            <value>
                <fullName>AMG Marketing &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Bionic SDR - Account Management</fullName>
            </value>
            <value>
                <fullName>Bionic SDR - Fulfillment</fullName>
            </value>
            <value>
                <fullName>Bionic SDR - Operations</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Inbound SDR - Account Management</fullName>
            </value>
            <value>
                <fullName>Inbound SDR - Fulfillment</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing/Culture</fullName>
            </value>
            <value>
                <fullName>Outbound SDR - Account Management</fullName>
            </value>
            <value>
                <fullName>Outbound SDR - Fulfillment</fullName>
            </value>
            <value>
                <fullName>Outbound SDR - Operations</fullName>
            </value>
            <value>
                <fullName>Product, Process, and Project Management</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Sales/Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
                <isActive>false</isActive>
                <label>Data Analytics</label>
            </value>
            <value>
                <fullName>Digital Content &amp; Strategy</fullName>
                <isActive>false</isActive>
                <label>Digital Content &amp; Strategy</label>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
                <isActive>false</isActive>
                <label>Email Marketing</label>
            </value>
            <value>
                <fullName>Executive Sales</fullName>
                <isActive>false</isActive>
                <label>Executive Sales</label>
            </value>
            <value>
                <fullName>HR / Recruiting / Training</fullName>
                <isActive>false</isActive>
                <label>HR / Recruiting / Training</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
                <isActive>false</isActive>
                <label>Implementation</label>
            </value>
            <value>
                <fullName>Implementations / Operations</fullName>
                <isActive>false</isActive>
                <label>Implementations / Operations</label>
            </value>
            <value>
                <fullName>Marketing Collateral</fullName>
                <isActive>false</isActive>
                <label>Marketing Collateral</label>
            </value>
            <value>
                <fullName>Marketing Services Account</fullName>
                <isActive>false</isActive>
                <label>Marketing Services Account Management</label>
            </value>
            <value>
                <fullName>Outbound Pipeline Account Management</fullName>
                <isActive>false</isActive>
                <label>Outbound Pipeline Account Management</label>
            </value>
            <value>
                <fullName>Outbound Pipeline Activity Fulfillment</fullName>
                <isActive>false</isActive>
                <label>Outbound Pipeline Activity Fulfillment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>