force-app/main/default/objects/Case/fields/Inbound_Product_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Product_Recommendations__c</fullName>
    <description>Used to track what inbound services current Sapper or Abstrakt clients could benefit from being sold.</description>
    <label>Inbound Product Suggestions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New WordPress Website</fullName>
            </value>
            <value>
                <fullName>Ongoing SEO Content</fullName>
            </value>
            <value>
                <fullName>Local SEO</fullName>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>