force-app/main/default/objects/Case/fields/Jira_Epic_Number__c.field-meta.xml
<CustomField>
    <fullName>Jira_Epic_Number__c</fullName>
    <label>Jira Epic Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>