force-app/main/default/objects/Case/fields/Jira_ID__c.field-meta.xml
<CustomField>
    <fullName>Jira_ID__c</fullName>
    <label>Jira ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>