force-app/main/default/objects/Case/fields/Jira_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Integration_Status__c</fullName>
    <label>Jira Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synchronized</fullName>
            </value>
            <value>
                <fullName>Sent to Jira</fullName>
            </value>
            <value>
                <fullName>Synchronized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>