force-app/main/default/objects/Case/fields/Jira_Priority__c.field-meta.xml
<CustomField>
    <fullName>Jira_Priority__c</fullName>
    <label>Jira Priority</label>
    <length>3</length>
    <type>Text</type>
</CustomField>