force-app/main/default/objects/Case/fields/Jira_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Status__c</fullName>
    <label>Jira Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>