force-app/main/default/objects/Case/fields/Jira_User__c.field-meta.xml
<CustomField>
    <fullName>Jira_User__c</fullName>
    <label>Jira User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>