force-app/main/default/objects/Case/fields/Marketing_Asset__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Asset</label>
    <referenceTo>Marketing_Asset__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>