force-app/main/default/objects/Case/fields/Metric_Affected__c.field-meta.xml
<CustomField>
    <fullName>Metric_Affected__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Case Category &quot;A-Player Scorecard&quot;</description>
    <inlineHelpText>Used for Case Category &quot;A-Player Scorecard&quot;</inlineHelpText>
    <label>Metric</label>
    <referenceTo>Metric_Component__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>