force-app/main/default/objects/Case/fields/Must_Be_Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Must_Be_Resolved_By__c</fullName>
    <label>Must Be Resolved By:</label>
    <type>Date</type>
</CustomField>