force-app/main/default/objects/Case/fields/Notes_Examples__c.field-meta.xml
<CustomField>
    <fullName>Notes_Examples__c</fullName>
    <label>Notes &amp; Examples</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>