force-app/main/default/objects/Case/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IMAGE(CASE( Priority, &quot;Low&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Medium&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;High&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;/img/samples/light_red.gif&quot;),&quot;Current Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a sample formula field that displays a traffic light based on the case&apos;s priority.</inlineHelpText>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>