force-app/main/default/objects/Case/fields/Quality_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Quality_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check closed cases for quality.</description>
    <label>Quality Reviewed</label>
    <type>Checkbox</type>
</CustomField>