force-app/main/default/objects/Case/fields/ResolvedTimeBusinessHours__c.field-meta.xml
<CustomField>
    <fullName>ResolvedTimeBusinessHours__c</fullName>
    <label>Resolved Time (Business Hours)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>