force-app/main/default/objects/Case/fields/Send_to_Jira__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Jira__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Jira</label>
    <type>Checkbox</type>
</CustomField>