force-app/main/default/objects/Case/fields/State_the_Issue__c.field-meta.xml
<CustomField>
    <fullName>State_the_Issue__c</fullName>
    <label>State the Issue</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>